--- a/whatsapp-automation/public/admin/whatsapp.html
+++ b/whatsapp-automation/public/admin/whatsapp.html
@@ -9,18 +9,30 @@
       --bg:#0b1220; --card:#111827; --muted:#9ca3af; --text:#e5e7eb;
       --b:#374151; --ok:#34d399; --bad:#ef4444; --primary:#2563eb;
     }
-    /* garante que nada gere rolagem horizontal */
-    html,body{height:100%; overflow-x:hidden}
+    *{box-sizing:border-box}
+    html,body{height:100%}
     body{
       margin:0; background:var(--bg); color:var(--text);
       font:16px/1.45 Inter,system-ui,-apple-system,"Segoe UI",Roboto,Helvetica,Arial;
       display:flex; align-items:flex-start; justify-content:center;
     }
-    .wrap{ width:100%; max-width:560px; padding:28px 16px; }
+    .wrap{ width:100%; max-width:1100px; padding:28px 16px; }
+
+    /* GRID: duas colunas no desktop, uma no mobile */
+    .grid{
+      display:grid; gap:20px;
+      grid-template-columns: 1fr;
+    }
+    @media (min-width: 980px){
+      .grid{ grid-template-columns: 1fr 1fr; }
+    }
 
     .card{
-      background:var(--card); border:1px solid var(--b);
-      border-radius:14px; padding:16px; box-shadow:0 8px 30px rgba(0,0,0,.35);
+      background:var(--card);
+      border:1px solid var(--b);
+      border-radius:14px;
+      padding:16px;
+      box-shadow:0 8px 30px rgba(0,0,0,.35);
     }
 
     h2{margin:0 0 12px 0; font-size:18px; display:flex; align-items:center; gap:8px}
@@ -31,20 +43,32 @@
     .btn{
       padding:.65rem 1rem; border-radius:10px; border:1px solid var(--b);
       background:#1f2937; color:#fff; cursor:pointer;
-      transition:opacity .15s ease-in-out;
     }
     .btn.primary{ background:var(--primary); border-color:transparent }
     .btn:disabled{ opacity:.65; cursor:not-allowed }
     .link{ color:#9bbcff; text-decoration:none; padding:.6rem 0; }
     .link:hover{ text-decoration:underline }
 
+    /* bloco de STATUS (o JSON) — não deixa “empurrar” a página */
+    .statusBox{
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
+      background:#0e1626; border:1px solid var(--b); border-radius:8px;
+      padding:12px; margin-top:10px;
+      white-space: pre-wrap;      /* permite múltiplas linhas */
+      word-break: break-word;     /* quebra palavras muito longas */
+      overflow:auto;              /* rolagem se ficar grande */
+      max-height: 220px;
+    }
+
     .qr-card{
-      margin-top:14px; background:var(--card); border:1px solid var(--b);
+      background:var(--card); border:1px solid var(--b);
       border-radius:14px; padding:16px; text-align:center;
+      min-height: 420px;
     }
     #qr{
       display:none; width:300px; height:300px; background:#fff; border-radius:8px;
-      margin:12px auto 0 auto; object-fit:contain; box-shadow:0 0 0 1px rgba(0,0,0,.08);
+      margin:12px auto 0 auto; object-fit:contain;
+      box-shadow:0 0 0 1px rgba(0,0,0,.08);
     }
     .placeholder{
       width:300px; height:300px; border-radius:8px; margin:12px auto 0 auto;
@@ -52,21 +76,29 @@
       display:flex; align-items:center; justify-content:center; text-align:center;
       padding:0 12px;
     }
+
     small.note{ display:block; color:var(--muted); margin-top:10px }
   </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="card">
-      <h2> Status <span id="dot" class="dot red" title="desconectado"></span></h2>
+    <div class="grid">
+      <!-- COLUNA ESQUERDA: STATUS + BOTÕES -->
+      <div class="card">
+        <h2> Status <span id="dot" class="dot red" title="desconectado"></span></h2>
 
-      <div class="row" style="margin-bottom:4px">
-        <button id="btnConnect" class="btn primary">📲 Conectar</button>
-        <button id="btnDisconnect" class="btn">🔌 Desconectar</button>
-        <a class="link" href="/admin/groups">➡ Ir para Grupos</a>
+        <div class="row" style="margin-bottom:4px">
+          <button id="btnConnect" class="btn primary">📲 Conectar</button>
+          <button id="btnDisconnect" class="btn">🔌 Desconectar</button>
+          <a class="link" href="/admin/groups">➡ Ir para Grupos</a>
+        </div>
+
+        <pre id="statusBox" class="statusBox">{ "ok": true, "connected": false, "connecting": false, "qr": null }</pre>
       </div>
 
-      <div class="qr-card">
+      <!-- COLUNA DIREITA: QR CODE -->
+      <div class="card qr-card">
+        <h2>QR Code</h2>
         <div id="qrPlaceholder" class="placeholder">Aguardando geração do QR…</div>
         <img id="qr" alt="QR Code" />
         <small class="note">
@@ -78,13 +110,12 @@
   </div>
 
   <script>
-    const API = '/admin/wa';
-
-    const dot  = document.getElementById('dot');
-    const btnC = document.getElementById('btnConnect');
-    const btnD = document.getElementById('btnDisconnect');
-    const qr   = document.getElementById('qr');
-    const ph   = document.getElementById('qrPlaceholder');
+    const dot    = document.getElementById('dot');
+    const btnC   = document.getElementById('btnConnect');
+    const btnD   = document.getElementById('btnDisconnect');
+    const qr     = document.getElementById('qr');
+    const ph     = document.getElementById('qrPlaceholder');
+    const box    = document.getElementById('statusBox');
 
     let polling = null;
 
@@ -105,78 +136,60 @@
       }
     }
 
-    // fetch com timeout para não travar a UI
-    async function jsonFetch(url, opts={}, timeout=8000){
-      const ctrl = new AbortController();
-      const id   = setTimeout(() => ctrl.abort(), timeout);
-      try{
-        const res = await fetch(url, { ...opts, signal: ctrl.signal, cache:'no-store' });
-        if (!res.ok) throw new Error(`HTTP ${res.status}`);
-        return await res.json();
-      } finally { clearTimeout(id); }
+    function renderStatus(s){
+      // Não deixe o base64 gigante aparecer no JSON da esquerda
+      const view = { ...s };
+      if (view.qr && typeof view.qr === 'string' && view.qr.startsWith('data:image')) {
+        view.qr = '[qr-base64 omitido]';
+      }
+      box.textContent = JSON.stringify(view, null, 2);
     }
 
     async function getStatus(){
       try{
-        const s = await jsonFetch(`${API}/status`);
+        const r = await fetch('/admin/wa/status', { cache:'no-store' });
+        const s = await r.json();
 
         setDot(!!s.connected);
-        // estados dos botões
         btnC.disabled = !!s.connected || !!s.connecting;
         btnD.disabled = !s.connected && !s.connecting;
 
-        // exibe/oculta o QR conforme disponibilidade
-        if (s.qr) showQR(s.qr);
-        else if (!s.connected) showQR(null);
+        // mostra ou esconde o QR
+        if (s.qr) showQR(s.qr); else if (!s.connected) showQR(null);
 
-        // enquanto estiver conectando, mantemos polling mais frequente
+        // atualiza o painel de status (sem base64 gigante)
+        renderStatus(s);
+
+        // se estiver conectando, mantém polling
         if (s.connecting && !polling){
           polling = setInterval(getStatus, 2000);
         }
         if (!s.connecting && polling){
-          clearInterval(polling);
-          polling = null;
+          clearInterval(polling); polling = null;
         }
       }catch(e){
-        console.error('status error:', e);
-        // em erro de rede, não muda nada – próxima chamada tenta de novo
+        console.error(e);
       }
     }
 
     async function doConnect(){
       try{
-        btnC.disabled = true; btnD.disabled = true;
-        await jsonFetch(`${API}/connect`, { method:'POST' });
-        // inicia polling imediato após solicitar conexão
+        await fetch('/admin/wa/connect', { method:'POST' });
         if (!polling) polling = setInterval(getStatus, 2000);
         await getStatus();
-      }catch(e){ console.error('connect error:', e); }
-      finally{
-        // o getStatus acima já ajusta os botões; aqui só garantimos que nada fica “preso”
-        // (se já conectou/está conectando, continuarão desabilitados conforme a lógica)
-      }
+      }catch(e){ console.error(e); }
     }
 
     async function doDisconnect(){
       try{
-        btnC.disabled = true; btnD.disabled = true;
-        await jsonFetch(`${API}/disconnect`, { method:'POST' });
+        await fetch('/admin/wa/disconnect', { method:'POST' });
         await getStatus();
-      }catch(e){ console.error('disconnect error:', e); }
-      finally{
-        // estado final será definido por getStatus()
-      }
+      }catch(e){ console.error(e); }
     }
 
     btnC.addEventListener('click', doConnect);
     btnD.addEventListener('click', doDisconnect);
 
-    // limpa polling ao sair da página (boa prática)
-    window.addEventListener('beforeunload', () => {
-      if (polling) clearInterval(polling);
-    });
-
-    // status inicial
     getStatus();
   </script>
 </body>
