--- a/whatsapp-automation/public/admin/whatsapp.html
+++ b/whatsapp-automation/public/admin/whatsapp.html
@@ -18,13 +18,13 @@
     }
     .wrap{ width:100%; max-width:1100px; padding:28px 16px; }
 
-    /* GRID: duas colunas no desktop, uma no mobile */
+    /* GRID: 1 coluna no mobile, 2 no desktop, com minmax(0,1fr) para evitar overflow */
     .grid{
       display:grid; gap:20px;
-      grid-template-columns: 1fr;
+      grid-template-columns: minmax(0, 1fr);
     }
     @media (min-width: 980px){
-      .grid{ grid-template-columns: 1fr 1fr; }
+      .grid{ grid-template-columns: minmax(0, 1fr) minmax(0, 1fr); }
     }
 
     .card{
@@ -33,6 +33,8 @@
       border-radius:14px;
       padding:16px;
       box-shadow:0 8px 30px rgba(0,0,0,.35);
+      /* IMPORTANTÍSSIMO: permite que o grid filho encolha mesmo com conteúdo grande */
+      min-width:0;
     }
 
     h2{margin:0 0 12px 0; font-size:18px; display:flex; align-items:center; gap:8px}
@@ -49,21 +51,20 @@
     .link{ color:#9bbcff; text-decoration:none; padding:.6rem 0; }
     .link:hover{ text-decoration:underline }
 
-    /* bloco de STATUS (o JSON) — não deixa “empurrar” a página */
+    /* STATUS JSON – não pode empurrar layout */
     .statusBox{
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
       background:#0e1626; border:1px solid var(--b); border-radius:8px;
       padding:12px; margin-top:10px;
-      white-space: pre-wrap;      /* permite múltiplas linhas */
-      word-break: break-word;     /* quebra palavras muito longas */
-      overflow:auto;              /* rolagem se ficar grande */
+      white-space: pre-wrap;       /* permite múltiplas linhas */
+      overflow-wrap: anywhere;     /* quebra qualquer palavra enorme */
+      word-break: break-word;      /* quebra se necessário */
+      overflow: auto;              /* rolagem se ficar grande */
       max-height: 220px;
     }
 
     .qr-card{
-      background:var(--card); border:1px solid var(--b);
-      border-radius:14px; padding:16px; text-align:center;
-      min-height: 420px;
+      text-align:center; min-height: 420px;
     }
     #qr{
       display:none; width:300px; height:300px; background:#fff; border-radius:8px;
@@ -76,7 +77,6 @@
       display:flex; align-items:center; justify-content:center; text-align:center;
       padding:0 12px;
     }
-
     small.note{ display:block; color:var(--muted); margin-top:10px }
   </style>
 </head>
@@ -93,7 +93,7 @@
           <a class="link" href="/admin/groups">➡ Ir para Grupos</a>
         </div>
 
-        <pre id="statusBox" class="statusBox">{ "ok": true, "connected": false, "connecting": false, "qr": null }</pre>
+        <pre id="statusBox" class="statusBox">{ "ok": true, "connected": false, "connecting": false }</pre>
       </div>
 
       <!-- COLUNA DIREITA: QR CODE -->
@@ -137,11 +137,9 @@
     }
 
     function renderStatus(s){
-      // Não deixe o base64 gigante aparecer no JSON da esquerda
+      // NÃO MOSTRAR O BASE64 DO QR NO STATUS (remove a chave)
       const view = { ...s };
-      if (view.qr && typeof view.qr === 'string' && view.qr.startsWith('data:image')) {
-        view.qr = '[qr-base64 omitido]';
-      }
+      delete view.qr;
       box.textContent = JSON.stringify(view, null, 2);
     }
 
