--- a/whatsapp-automation/public/admin/whatsapp.html
+++ b/whatsapp-automation/public/admin/whatsapp.html
@@ -18,11 +18,17 @@
     }
     .wrap{ width:100%; max-width:1100px; padding:28px 16px; }
 
-    /* GRID: 1 coluna no mobile, 2 no desktop, com minmax(0,1fr) para evitar overflow */
-    .grid{
-      display:grid; gap:20px;
-      grid-template-columns: minmax(0, 1fr);
+    /* ====== ABAS ====== */
+    .tabs{display:flex; gap:8px; margin:0 0 18px 0; flex-wrap:wrap}
+    .tab{
+      display:inline-block; padding:.55rem .9rem; border-radius:10px;
+      border:1px solid var(--b); background:#101827; color:#dbe2f0; text-decoration:none
     }
+    .tab.active{ background:var(--primary); border-color:transparent; color:#fff }
+    .tab:hover{ filter:brightness(1.05) }
+
+    /* GRID */
+    .grid{ display:grid; gap:20px; grid-template-columns: minmax(0, 1fr); }
     @media (min-width: 980px){
       .grid{ grid-template-columns: minmax(0, 1fr) minmax(0, 1fr); }
     }
@@ -48,18 +54,13 @@
     }
     .btn.primary{ background:var(--primary); border-color:transparent }
     .btn:disabled{ opacity:.65; cursor:not-allowed }
-    .link{ color:#9bbcff; text-decoration:none; padding:.6rem 0; }
-    .link:hover{ text-decoration:underline }
 
     .statusBox{
       font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
       background:#0e1626; border:1px solid var(--b); border-radius:8px;
       padding:12px; margin-top:10px;
-      white-space: pre-wrap;
-      overflow-wrap: anywhere;
-      word-break: break-word;
-      overflow: auto;
-      max-height: 220px;
+      white-space: pre-wrap; overflow-wrap: anywhere; word-break: break-word;
+      overflow: auto; max-height: 220px;
     }
 
     .qr-card{ text-align:center; min-height: 420px; }
@@ -79,6 +80,14 @@
 </head>
 <body>
   <div class="wrap">
+    <!-- ABAS / ATALHOS -->
+    <nav class="tabs">
+      <a class="tab" data-path="/admin/whatsapp" href="/admin/whatsapp">WhatsApp</a>
+      <a class="tab" data-path="/admin/groups" href="/admin/groups">Grupos</a>
+      <a class="tab" data-path="/admin/wa/logs" href="/admin/wa/logs" target="_blank" rel="noopener">Logs</a>
+      <a class="tab" data-path="/api/whatsapp/status" href="/api/whatsapp/status" target="_blank" rel="noopener">Status JSON</a>
+    </nav>
+
     <div class="grid">
       <!-- COLUNA ESQUERDA: STATUS + BOTÕES -->
       <div class="card">
@@ -91,9 +100,6 @@
           <button id="btnConnect" class="btn primary">📲 Conectar</button>
           <button id="btnDisconnect" class="btn">🔌 Desconectar</button>
           <button id="btnReset" class="btn">🧹 Limpar sessão</button>
-          <a class="link" href="/admin/groups">➡ Ir para Grupos</a>
-          <a class="link" href="/admin/wa/logs" target="_blank" rel="noopener">📜 Logs</a>
-          <a class="link" href="/api/whatsapp/status" target="_blank" rel="noopener">🧪 Status JSON</a>
         </div>
 
         <pre id="statusBox" class="statusBox">{ "ok": true, "connected": false, "connecting": false }</pre>
@@ -113,6 +119,15 @@
   </div>
 
   <script>
+    // Destaca a aba ativa conforme a URL
+    (function markActiveTab(){
+      const p = location.pathname;
+      document.querySelectorAll('.tab').forEach(a=>{
+        const want = a.getAttribute('data-path');
+        if (p === want) a.classList.add('active');
+      });
+    })();
+
     // Endpoints
     const STATUS_URL = '/api/whatsapp/status';   // consolidado (traz msisdn)
     const STREAM_URL = '/api/whatsapp/stream';   // SSE
@@ -236,7 +251,7 @@
 
     // Inicialização
     startSSE();     // tenta SSE primeiro
-    fetchStatus();  // puxa um snapshot inicial
+    fetchStatus();  // snapshot inicial
   </script>
 </body>
 </html>
